--- a/OnlineVisaCenter/src/main/webapp/countries.html
+++ b/OnlineVisaCenter/src/main/webapp/countries.html
@@ -29,22 +29,23 @@
             </div>
         </div>
     </div>
-</div>
 
-<div class="row justify-content-center">
-    <div ng-controller="application_controller" data-ng-init='getCountry()' class="col-4">
-        <table ng-repeat="country in countries" class="table table-hover">
-            <tbody>
-            <tr>
-                <td class="col-2">
-                    {{country.name}}
-                </td>
-                <td class="col-2">
-                    <button class="btn btn-danger" ng-click="deleteCountry(country.id)" type="submit">Delete</button>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+
+    <div class="row justify-content-center">
+        <div  data-ng-init='getCountry()' class="col-4">
+            <table ng-repeat="country in countries" class="table table-hover">
+                <tbody>
+                <tr>
+                    <td class="col-2">
+                        {{country.name}}
+                    </td>
+                    <td class="col-2">
+                        <button class="btn btn-danger" ng-click="deleteCountry(country.id)" type="submit">Delete</button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 </body>
