--- a/OnlineVisaCenter/src/main/webapp/document_types.html
+++ b/OnlineVisaCenter/src/main/webapp/document_types.html
@@ -29,23 +29,24 @@
             </div>
         </div>
     </div>
-</div>
 
-<div class="row justify-content-center">
-    <div ng-controller="application_controller" data-ng-init='getDocumentTypes()' class="col-4">
-        <table ng-repeat="document_type in document_types" class="table table-hover">
-            <tbody>
-            <tr>
-                <td class="col-2">
-                    {{document_type.name}}
-                </td>
-                <td class="col-2">
-                    <button class="btn btn-danger" ng-click="deleteDocumentType(document_type.id)" type="submit">Delete</button>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="row justify-content-center">
+        <div  data-ng-init='getDocumentTypes()' class="col-4">
+            <table ng-repeat="document_type in document_types" class="table table-hover">
+                <tbody>
+                <tr>
+                    <td class="col-2">
+                        {{document_type.name}}
+                    </td>
+                    <td class="col-2">
+                        <button class="btn btn-danger" ng-click="deleteDocumentType(document_type.id)" type="submit">Delete</button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
+
 </body>
 </html>
