--- a/OnlineVisaCenter/src/main/webapp/application_for_employee.html
+++ b/OnlineVisaCenter/src/main/webapp/application_for_employee.html
@@ -11,7 +11,7 @@
 <br/>
 <div class="row justify-content-center">
 
-<div ng-controller="application_controller" data-ng-init="getApplication(); getResults()" class="col-8">
+<div ng-controller="application_controller" data-ng-init="getApplicationForShow(); getResults()" class="col-8">
     <div class="col-12">
         <table class="table table-bordered table-striped ">
             <tbody>
