--- a/OnlineVisaCenter/src/main/webapp/applications.html
+++ b/OnlineVisaCenter/src/main/webapp/applications.html
@@ -52,7 +52,7 @@
                 {{application.creationTime}}
             </td>
             <td>
-                <button class="btn btn-success" ng-click="showApplicationForEmployee(application.id)" type="submit">Show</button>
+                <button class="btn btn-success" ng-click="showApplicationForEmployee(application)" type="submit">Show</button>
             </td>
         </tr>
         </tbody>
