--- a/OnlineVisaCenter/src/main/webapp/user_applications.html
+++ b/OnlineVisaCenter/src/main/webapp/user_applications.html
@@ -53,7 +53,7 @@
                 {{application.creationTime}}
             </td>
             <td>
-                <button class="btn btn-success" ng-click="showApplication(application.id)" type="submit">Show</button>
+                <button class="btn btn-success" ng-click="showApplication(application)" type="submit">Show</button>
             </td>
         </tr>
         </tbody>
