--- a/OnlineVisaCenter/src/main/webapp/login_page.html
+++ b/OnlineVisaCenter/src/main/webapp/login_page.html
@@ -42,10 +42,10 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" class="btn btn-primary btn-lg btn-block login-button"/>
+                    <input type="submit" value="Sign in" class="btn btn-primary btn-lg btn-block login-button"/>
                 </div>
                 <div class="login-register">
-                    <a href="registration.html">Sign Up</a>
+                    <a href="registration.html">Sign up</a>
                 </div>
             </form>
 
