--- a/OnlineVisaCenter/src/main/webapp/registration.html
+++ b/OnlineVisaCenter/src/main/webapp/registration.html
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" class="btn btn-primary btn-lg btn-block login-button"/>
+                    <input type="submit" value="Sign up" class="btn btn-primary btn-lg btn-block login-button"/>
                 </div>
                 <div class="login-register">
                     <a href="login_page.html">Login</a>
