--- a/OnlineVisaCenter/src/main/webapp/visas.html
+++ b/OnlineVisaCenter/src/main/webapp/visas.html
@@ -4,12 +4,6 @@
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 <script src="application_controller.js"></script>
-
-<!--<link type="text/css"  rel="stylesheet"  href="bootstrap.min.css" />-->
-<!--<script type="text/javascript" src="jquery-2.1.3.min.js"></script>-->
-<!--<script type="text/javascript" src="bootstrap-multiselect.js"></script>-->
-<!--<link rel="stylesheet" href="bootstrap-multiselect.css" type="text/css">-->
-<!--<script src="bootstrap.min.js"></script>-->
 <body>
 <div ng-include="'employee_navbar.html'">
 </div>
@@ -35,7 +29,7 @@
                 <label class="my-1 mr-2" for="documents">Documents</label>
                 <select class="custom-select my-1 mr-sm-2" id="documents" multiple  ng-model="visa.requiredDocumentTypesId">
                     <option ng-repeat="d in document_types" value="{{d.id}}">{{d.name}}</option>
-                </select >
+                </select>
 
                 <button  type="submit" class="btn btn-success mb-2">Add</button>
             </form>
@@ -94,6 +88,9 @@
                         </td>
                         <td>
                             <button class="btn btn-danger" ng-click="deleteVisa(visa.id)" type="submit">Delete</button>
+                            <br/>
+                            <br/>
+                            <p><button class="btn btn-success" ng-click="toUpdateVisa(visa)" type="submit">Update</button></p>
                         </td>
                     </tr>
                     </tbody>
