--- a/OnlineVisaCenter/src/main/resources/static/employees.html
+++ b/OnlineVisaCenter/src/main/resources/static/employees.html
@@ -1,7 +1,7 @@
 <html ng-app="visa_center">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <script src="application_controller.js"></script>
+    <script src="js/angular.js"></script>
+    <script src="js/application_controller.js"></script>
     <title>All Users</title>
 </head>
 <body>
