--- a/OnlineVisaCenter/src/main/resources/static/registration.html
+++ b/OnlineVisaCenter/src/main/resources/static/registration.html
@@ -1,16 +1,16 @@
 <html ng-app="visa_center">
 <head>
-    <meta charset="UTF-8">
+    <script src="js/angular.js"></script>
+    <script src="js/application_controller.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <script src="application_controller.js"></script>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link href="css/3.3.0_bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <title>Log In</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <title>Registration</title>
 </head>
 <body>
-<div class="container" ng-controller="application_controller">
+<div class="container">
     <div class="row main">
         <div class="panel-heading">
             <div class="panel-title text-center">
@@ -18,15 +18,25 @@
                 <hr />
             </div>
         </div>
-        <div class="main-login main-center" >
-            <form class="form-horizontal" ng-submit="logUser(user)">
+        <div class="main-login main-center" ng-controller="application_controller">
+            <form class="form-horizontal" ng-submit="regUser(user)">
 
                 <div class="form-group">
                     <label for="name" class="cols-sm-2 control-label">Your Login</label>
                     <div class="cols-sm-10">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                            <input ng-model="user.login" required  type="text" class="form-control" name="name" id="name"  placeholder="Enter your Login"/>
+                            <input ng-model ="user.login" required type="text" class="form-control" name="name" id="name"  placeholder="Enter your Login"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="email" class="cols-sm-2 control-label">Your Email</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+                            <input ng-model="user.email" required type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
                         </div>
                     </div>
                 </div>
@@ -42,15 +52,19 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" value="Sign in" class="btn btn-primary btn-lg btn-block login-button"/>
+                    <input type="submit" value="Sign up" class="btn btn-primary btn-lg btn-block login-button"/>
                 </div>
                 <div class="login-register">
-                    <a href="registration.html">Sign up</a>
+                    <a href="index.html">Login</a>
                 </div>
             </form>
 
-            <div ng-show="messageBool" class="alert alert-danger">
-                <strong>{{errorMessage}}</strong>
+            <div ng-show="messageBool"  class="alert alert-danger">
+                <strong >{{errorMessage}}</strong>
+            </div>
+
+            <div  ng-repeat="error in validationErrors" ng-show="messageBool"  class="alert alert-danger" role="alert">
+                {{error}}
             </div>
         </div>
     </div>
