--- a/OnlineVisaCenter/src/main/resources/static/visas.html
+++ b/OnlineVisaCenter/src/main/resources/static/visas.html
@@ -2,8 +2,8 @@
 <head>
     <title>Visas</title>
 </head>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<script src="application_controller.js"></script>
+<script src="js/angular.js"></script>
+<script src="js/application_controller.js"></script>
 <body>
 <div ng-include="'employee_navbar.html'">
 </div>
