--- a/OnlineVisaCenter/src/main/resources/static/countries.html
+++ b/OnlineVisaCenter/src/main/resources/static/countries.html
@@ -1,9 +1,9 @@
 <html ng-app="visa_center">
 <head>
-    <title>Document Types</title>
+    <title>Countries</title>
 </head>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<script src="application_controller.js"></script>
+<script src="js/angular.js"></script>
+<script src="js/application_controller.js"></script>
 <body>
 <div ng-include="'employee_navbar.html'">
 </div>
@@ -11,9 +11,9 @@
 <br/>
 <div ng-controller="application_controller">
     <div class="row justify-content-center">
-        <form class="form-inline"   ng-submit="addDocumentType(document_type)">
-            <label class="sr-only" for="inlineFormInputLogin">Document type</label>
-            <input ng-model ="document_type.name" type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputLogin" placeholder="Document name">
+        <form class="form-inline"   ng-submit="addCountry(country)">
+            <label class="sr-only" for="inlineFormInputLogin">Country name</label>
+            <input ng-model ="country.name" type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputLogin" placeholder="Country name">
             <button  type="submit" class="btn btn-success mb-2">Add</button>
         </form>
     </div>
@@ -30,16 +30,17 @@
         </div>
     </div>
 
+
     <div class="row justify-content-center">
-        <div  data-ng-init='getDocumentTypes()' class="col-4">
-            <table ng-repeat="document_type in document_types" class="table table-hover">
+        <div  data-ng-init='getCountry()' class="col-4">
+            <table ng-repeat="country in countries" class="table table-hover">
                 <tbody>
                 <tr>
                     <td class="col-2">
-                        {{document_type.name}}
+                        {{country.name}}
                     </td>
                     <td class="col-2">
-                        <button class="btn btn-danger" ng-click="deleteDocumentType(document_type.id)" type="submit">Delete</button>
+                        <button class="btn btn-danger" ng-click="deleteCountry(country.id)" type="submit">Delete</button>
                     </td>
                 </tr>
                 </tbody>
@@ -47,6 +48,5 @@
         </div>
     </div>
 </div>
-
 </body>
 </html>
