--- a/OnlineVisaCenter/src/main/resources/static/employee_navbar.html
+++ b/OnlineVisaCenter/src/main/resources/static/employee_navbar.html
@@ -1,10 +1,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<script src="application_controller.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="main.css">
+<link href="css/4.1.0_bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="js/angular.js"></script>
+<script src="js/application_controller.js"></script>
+<link rel="stylesheet" type="text/css" href="css/main.css">
 <div ng-controller="application_controller" data-ng-init="getStatuses()">
     <nav class="navbar navbar-expand navbar-light bg-light">
         <a class="navbar-brand">Employee</a>
